# datoon

./: .gitignore  .pre-commit-config.yaml  .releaserc  .releaserc.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  MARKETPLACES.md  README.md  SECURITY.md  SKILL.md  datoon.skill  glama.json  install.sh  pyproject.toml  server.json  setup.sh  smithery.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: package-installer-smoke.yml  pages.yml  pre-commit.yml  publish-mcp.yml  publish.yml  release.yml  sync-skill.yml  tests.yml  validate-artifacts.yml  workflow-lint.yml
benchmarks/: payloads.json  run.py
benchmarks/agent_skill_eval/: REPORT.md  agent_results.json  expected_answers.json  generate_payloads.py  scored_agent_results.json
benchmarks/agent_skill_eval/payloads/: 1_large.json  1_medium.json  1_small.json  2_large.json  2_medium.json  2_small.json  3_large.json  3_medium.json  3_small.json
benchmarks/agent_skill_eval/reports/: 1_large.report.json  1_small.report.json  2_large.report.json  3_large.report.json  3_medium.report.json  3_small.report.json
benchmarks/agent_skill_eval/toon/: 1_large.toon  1_medium.toon  1_small.toon  2_large.toon  2_medium.toon  2_small.toon  3_large.toon  3_medium.toon  3_small.toon
docs/: index.html  styles.css
plugins/datoon/.codex-plugin/: plugin.json
plugins/datoon/skills/datoon/: SKILL.md
scripts/: ab_skill_benchmark.py  install.py  summarize_agent_skill_eval.py  validate_plugin_metadata.py  validate_skill_sync.py
skills/datoon/: README.md  SKILL.md
src/datoon/: __init__.py  analyzer.py  cli.py  converter.py  errors.py  mcp_server.py  models.py
src/datoon/readers/: __init__.py  _coerce.py  _tabular.py  columnar.py  csv.py  excel.py  jsonl.py  numbers.py  xml.py  yaml.py
tests/fixtures/: users.expected.toon  users.json
tests/integration/: test_toon_cli_integration.py
tests/unit/: test_analyzer.py  test_benchmark_readme.py  test_cli.py  test_converter_policy.py  test_errors.py  test_installer.py  test_mcp_server.py  test_models.py  test_readers.py  test_tabular_rows.py  test_tokens.py
