[build-system]
requires = ["setuptools>=69.0", "setuptools-scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datoon"
dynamic = ["version"]
description = "Smart JSON-to-TOON conversion with pragmatic auto-gating for LLM prompts."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Andrii Suruhov", email = "andrii.suruhov@gmail.com" }
]
keywords = ["llm", "prompt-engineering", "json", "toon", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pre-commit>=4.5.1"]
tokens = ["tiktoken>=0.8.0"]
mcp = ["mcp>=1.6.0"]

[project.urls]
Homepage = "https://github.com/andrii-su/datoon"
Repository = "https://github.com/andrii-su/datoon"
Issues = "https://github.com/andrii-su/datoon/issues"

[project.scripts]
datoon = "datoon.cli:main"
datoon-mcp = "datoon.mcp_server:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
datoon = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/datoon/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: tests that require Node.js and @toon-format/cli access",
]
